change email and phone and username

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ DB_HOST="localhost"
 
 COOKIE_SECRET="eoqieoqwioiasdiai123i1apdias"
 OTP_TOKEN_SECRET="EKSJDKASHDAKSHKDAJHDLASJLDKA"
+
+EMAIL_TOKEN_SECRET="EAKHSEAHEAUISEIUYHQWIE23810983"
+PHONE_TOKEN_SECRET="SAJDLKWOIUEQ349824982SAKDJKSA"
