--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 /dist
 /node_modules
 /build
-
 # Logs
 logs
 *.log
@@ -27,6 +26,7 @@ lerna-debug.log*
 *.launch
 .settings/
 *.sublime-workspace
+/public/uploads/*
 
 # IDE - VSCode
 .vscode/*
