Sms http request for otp code

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,5 @@ OTP_TOKEN_SECRET="EKSJDKASHDAKSHKDAJHDLASJLDKA"
 
 EMAIL_TOKEN_SECRET="EAKHSEAHEAUISEIUYHQWIE23810983"
 PHONE_TOKEN_SECRET="SAJDLKWOIUEQ349824982SAKDJKSA"
+SMS_IR_VERIFY_SEND_URL=https://api.sms.ir/v1/send/verify
+SMS_IR_API_KEY=
