--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,6 @@ EMAIL_TOKEN_SECRET="EAKHSEAHEAUISEIUYHQWIE23810983"
 PHONE_TOKEN_SECRET="SAJDLKWOIUEQ349824982SAKDJKSA"
 SMS_IR_VERIFY_SEND_URL=https://api.sms.ir/v1/send/verify
 SMS_IR_API_KEY=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
