fix cors origin and access to cookies

--- a/.env.example
+++ b/.env.example
@@ -8,9 +8,10 @@ DB_HOST="localhost"
 
 COOKIE_SECRET="eoqieoqwioiasdiai123i1apdias"
 OTP_TOKEN_SECRET="EKSJDKASHDAKSHKDAJHDLASJLDKA"
-
+ACCESS_TOKEN_SECRET="EASKJDIOSAUOEQWBZCZX123213"
 EMAIL_TOKEN_SECRET="EAKHSEAHEAUISEIUYHQWIE23810983"
 PHONE_TOKEN_SECRET="SAJDLKWOIUEQ349824982SAKDJKSA"
+
 SMS_IR_VERIFY_SEND_URL=https://api.sms.ir/v1/send/verify
 SMS_IR_API_KEY=
 
